public enum Opcode {
    OP_0,
    OP_1,
    OP_2,
    OP_3,
    OP_4,
    OP_5,
    OP_6,
    OP_7,
    OP_8,
    OP_9,
    OP_10,
    OP_11,
    OP_12,
    OP_13,
    OP_14,
    OP_15,
    OP_16,
    OP_DUP,
    OP_DROP,
    OP_EQUAL,
    OP_EQUALVERIFY,
    OP_HASH160,
    OP_CHECKSIG,
    OP_IF,
    OP_ELSE,
    OP_ENDIF
}
