public interface Token {
    void execute(ExecutionContext ctx);
}