@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true

title Diagrama UML - Bitcoin Script Interpreter

interface Token {
  +execute(ctx: ExecutionContext): void
}

class PushDataToken {
  -data: byte[]
  +PushDataToken(data: byte[])
  +execute(ctx: ExecutionContext): void
  +toString(): String
}

class OpcodeToken {
  -opcode: Opcode
  +OpcodeToken(opcode: Opcode)
  +getOpcode(): Opcode
  +execute(ctx: ExecutionContext): void
  +toString(): String
}

enum Opcode {
  OP_0
  OP_1
  OP_2
  OP_3
  OP_4
  OP_5
  OP_6
  OP_7
  OP_8
  OP_9
  OP_10
  OP_11
  OP_12
  OP_13
  OP_14
  OP_15
  OP_16
  OP_DUP
  OP_DROP
  OP_EQUAL
  OP_EQUALVERIFY
  OP_HASH160
  OP_CHECKSIG
  OP_IF
  OP_ELSE
  OP_ENDIF
}

class ExecutionContext {
  -stack: Deque<byte[]>
  +push(data: byte[]): void
  +pop(): byte[]
  +peek(): byte[]
  +isEmpty(): boolean
  +isTrue(bytes: byte[]): boolean
  +toString(): String
}

class ScriptParser {
  +parse(script: String): List<Token>
}

class ScriptInterpreter {
  +execute(tokens: List<Token>, ctx: ExecutionContext): boolean
  +execute(tokens: List<Token>, ctx: ExecutionContext, trace: boolean): boolean
}

class CryptoMock {
  +sha256(data: byte[]): byte[]
  +hash160(data: byte[]): byte[]
}

class Hex {
  +hexToBytes(hex: String): byte[]
  +bytesToHex(bytes: byte[]): String
}

class Main {
  +main(args: String[]): void
}

Token <|.. PushDataToken
Token <|.. OpcodeToken

OpcodeToken --> Opcode
PushDataToken ..> ExecutionContext
OpcodeToken ..> ExecutionContext

ScriptParser ..> Token
ScriptParser ..> PushDataToken
ScriptParser ..> OpcodeToken
ScriptParser ..> Hex

ScriptInterpreter ..> Token
ScriptInterpreter ..> ExecutionContext
ScriptInterpreter ..> OpcodeToken

OpcodeToken ..> CryptoMock
OpcodeToken ..> ExecutionContext

Main ..> ScriptParser
Main ..> ScriptInterpreter
Main ..> ExecutionContext
Main ..> Hex
Main ..> CryptoMock
Main ..> Token

@enduml
